force-app/main/default/objects/Application_Fee__c/Application_Fee__c.object-meta.xml
<CustomObject>
    <label>Application Fee</label>
    <nameField>
        <displayFormat>AFI-{00000000}</displayFormat>
        <label>Application Fee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>