force-app/main/default/objects/Application_Fee__c/fields/Calculating_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Calculating_Frequency__c</fullName>
    <label>Calculating Frequency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>