force-app/main/default/objects/Application_Fee__c/fields/Equipment_List__c.field-meta.xml
<CustomField>
    <fullName>Equipment_List__c</fullName>
    <label>Equipment List</label>
    <length>200</length>
    <type>Text</type>
</CustomField>