force-app/main/default/objects/Application_Fee__c/fields/Number_of_Terms__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Terms__c</fullName>
    <label>Number Of Terms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>