force-app/main/default/objects/Application_Fee__c/fields/Parent_Application_Fee__c.field-meta.xml
<CustomField>
    <fullName>Parent_Application_Fee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Application Fee</label>
    <referenceTo>Application_Fee__c</referenceTo>
    <relationshipLabel>Application Fees (Parent Application Fee)</relationshipLabel>
    <relationshipName>Application_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>