force-app/main/default/objects/Application_Fee__c/fields/ProrateAmount__c.field-meta.xml
<CustomField>
    <fullName>ProrateAmount__c</fullName>
    <label>ProrateAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>