force-app/main/default/objects/Application_Fee__c/fields/Service_Fee_Escalation_Config__c.field-meta.xml
<CustomField>
    <fullName>Service_Fee_Escalation_Config__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Fee Escalation Config</label>
    <referenceTo>Service_Fee_Escalation_Config__c</referenceTo>
    <relationshipLabel>Application Fees</relationshipLabel>
    <relationshipName>Application_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>